--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,39 @@ npm-debug.log*
 yarn-error.log
 .DS_Store
 Thumbs.db
+
+# Local environment variable overrides
+.env.local
+.env.*.local
+
+# Private keys and certificates
+*.pem
+*.p12
+*.pfx
+id_rsa
+id_ed25519
+# If you use .key files for private keys and not for other configurations,
+# you might consider adding '*.key'. For now, it's commented out to avoid being too broad.
+# *.key
+
+# Downloaded credentials files
+credentials.json
+secrets.json
+service-account-key.json
+service_account.json
+google-credentials.json
+
+# IDE specific folders
+.vscode/
+.idea/
+
+# Editor backup and swap files
+*.swp
+*~
+*.bak
+*.tmp
+
+# Other OS-specific files
+.AppleDouble
+.LSOverride
+Desktop.ini
