--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^4.1.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.23"
   },
   "scripts": {
